Added test route for testing async data

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Project101Admin/backend#readme",
   "dependencies": {
+    "axios": "^1.2.6",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
