--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
+    "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "vercel": "^28.14.0"
