--- a/config.env
+++ b/config.env
@@ -1,1 +1,1 @@
-DATABASE=mongodb+srv://priyanshu:appyfizz@cluster0.4arzow6.mongodb.net/backend?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Admin:eq2Jft8fAl2maPsk@cluster0.g0jjtmj.mongodb.net/staging-campus-diaries?retryWrites=true&w=majority
